@@ -11,6 +11,7 @@ Keyboard is now focused correctly.
 You can now teleport.
 * Added a setting to disable teleporting temporarily.
 * You also have a faint shadow now.
+Panels now have tooltips.
 
 [2021.06.03]
 Implemented saving and loading ruleset bindings.
